# libmbox2

./: .gitignore  AUTHORS  Makefile.am  README.md  TODO.md  autogen.sh  compile.sh  configure.ac
delete-from-file/: main.c  sample.txt
include/: Makefile.am  libmbox2.h
lookback-algorithm/: bufctx.c  bufctx.h  io.c  io.h  list.c  list.h  main.c  try-segfault.sh  workers.c  workers.h
multi-thread-reads/: main.c  pread.c  tiny.mbox
src/: Makefile.am  Makefile.dep  macros.h  mbox-array.c  mbox-array.h  mbox-buf.c  mbox-buf.h  mbox-common-headers.c  mbox-common-headers.h  mbox-date.c  mbox-date.h  mbox-index.c  mbox-index.h  mbox-io.c  mbox-io.h  mbox-list.c  mbox-list.h  mbox-logger.h  mbox-memory.c  mbox-memory.h  mbox-msg.c  mbox-msg.h  mbox-parser.c  mbox-parser.h  mbox-redblacktree.c  mbox-redblacktree.h  mbox-timing.c  mbox-timing.h  mbox-worker.c  mbox-worker.h  mbox.c  mbox.h  tests.c
